# tango

./: .gitignore  .prettierrc.json  README.md  tango.code-workspace
client/: .env  .eslintrc.json  README.md  TODO  config.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/assets/: icon.ai
client/public/: index.html  manifest.json
client/src/: App.tsx  ImageSearchCursor.ts  MuiTheme.ts  TangoConfig.ts  index.scss  index.tsx
client/src/components/: ContentLoader.tsx  FlashPost.tsx  ImagePost.tsx  LoadingOverlay.tsx  LoadingSpinner.tsx  MenuBar.tsx  OptionsList.tsx  PageContainer.tsx  SearchBox.tsx  SearchFilters.tsx  SideBar.tsx  TagChip.tsx  TagChipList.tsx  TagInput.tsx  TagsCard.tsx  VideoPost.tsx
client/src/features/: ApiResponse.ts  AsyncMapValue.ts  AsyncValue.ts  BooruRequest.tsx  ContentCache.ts  GlobalDispatcher.ts  Hooks.ts  PostSearchCursor.ts  SearchFilterOptions.ts  SparsePostArray.ts  Store.ts
client/src/models/: BooruImage.tsx  BooruPool.tsx  BooruPost.tsx  BooruTag.tsx  BooruUser.tsx
client/src/pages/: ErrorPage.tsx  ListPage.tsx  LoginPage.tsx  RootPage.tsx  SignupPage.tsx
client/src/routes/: ErrorPage.tsx  ImagePage.tsx  ListPage.tsx  LoginPage.tsx  PostPage.tsx  RootPage.tsx
client/src/styles/: ImagePage.scss  ImportPage.scss  ListPage.scss  Main.scss  MenuBar.scss  PostCards.scss  PostPage.scss  TagsCard.scss  UploadPage.scss  Variables.scss
client/src/typings/: videojs.d.ts
client/src/util/: Base64.ts  Functional.ts  History.ts  Internationalization.ts  LocalSettings.ts  Logger.ts  Result.ts  UIError.ts  Util.ts  Util.tsx
notes/: upload-refactor.md
server/: .eslintrc.json  API.md  Cargo.toml  README.md  build.rs  config.json  jest.config.js  package-lock.json  package.json  start.sh  tsconfig.json
server-rs/: .gitignore  Cargo.toml  log4rs.yml  server-rs.code-workspace
server-rs/src/: main.rs  util.rs
server-rs/src/modules/: mod.rs
server-rs/src/modules/auth/: api.rs  middleware.rs  mod.rs  model.rs  util.rs
server-rs/src/modules/favorites/: api.rs  mod.rs  schema.rs
server-rs/src/modules/import/: api.rs  mod.rs  schema.rs  util.rs
server-rs/src/modules/import/resolvers/: mod.rs  util.rs
server-rs/src/modules/import/resolvers/fluffle/: mod.rs  resolver.rs
server-rs/src/modules/import/services/: mod.rs  service.rs
server-rs/src/modules/import/services/e621/: mod.rs  service.rs  types.rs
server-rs/src/modules/posts/: api.rs  mod.rs  model.rs  util.rs
server-rs/src/modules/posts/query/: alias_resolver.rs  mod.rs  parser.rs  query_engine.rs  query_object.rs
server-rs/src/modules/tags/: api.rs  model.rs
server-rs/src/modules/users/: schema.rs  util.rs
server/migrations/: 20240603000000_initial_migration.sql  20240603044018_add_image_views_column.sql  20240603050239_add_tag_user_frequencies.sql  20240607220225_upload_jobs.sql
server/prisma/: schema.prisma
server/prisma/migrations/20230906181852_init/: migration.sql
server/prisma/migrations/20230906181943_init/: migration.sql
server/prisma/migrations/20230906182034_add_auth_tokens/: migration.sql
server/prisma/migrations/20230906182533_remove_auth_tokens/: migration.sql
server/prisma/migrations/20230908212322_add_tag_info/: migration.sql
server/src/: Config.ts  IRouter.ts  Prisma.ts  Server.ts  app_state.rs  booru_config.rs  error.rs  index.ts  main.rs  storage.rs  util.rs  version.rs
server/src/modules/: mod.rs
server/src/modules/favorites/: api.rs  mod.rs
server/src/modules/import/: api.rs  schema.rs
server/src/modules/import/resolvers/: resolver.rs  util.rs
server/src/modules/import/resolvers/fluffle/: resolver.rs  schema.rs
server/src/modules/import/services/: mod.rs  service.rs
server/src/modules/import/services/e926/: service.rs  types.rs
server/src/modules/pools/: api.rs  mod.rs  model.rs  schema.rs
server/src/modules/posts/: Router.ts  api.rs  edit.rs  mod.rs  model.rs  schema.rs  util.rs
server/src/modules/posts/new/: api.rs  media.rs  mod.rs  process.rs  schema.rs  upload.rs
server/src/modules/posts/query/: alias_resolver.rs  api.rs  image_conditions.rs  mod.rs  model.rs  parser.rs  query_engine.rs  query_object.rs
server/src/modules/system/: api.rs  mod.rs
server/src/modules/tags/: AliasRouter.ts  Router.ts  api.rs  mod.rs  model.rs
server/src/modules/upload_jobs/: api.rs  file.rs  job.rs  mod.rs
server/src/modules/upload_jobs/import/: mod.rs  url.rs
server/src/modules/users/: AuthUtil.ts  Middleware.ts  Router.ts  api.rs  middleware.rs  mod.rs  model.rs  schema.rs  user.rs  util.rs
server/src/modules/users/config/: api.rs  mod.rs  schema.rs
server/src/modules/users/invites/: api.rs  mod.rs  model.rs
server/src/routes/: ImageRouter.ts
server/src/util/: ApiAsyncHandler.ts  JsonResponseMiddleware.ts  NotFoundMiddleware.ts  QueryParser.ts  Util.ts  mod.rs
server/src/util/database/: mod.rs  query_object.rs  queryable.rs  types.rs
server/tests/: tag_aliases.test.ts  tags.test.ts  users.test.ts
server/tests/include/: Mock.ts  Request.ts  TestData.ts
shared/: data.json  package-lock.json  package.json  tsconfig.json
shared/src/: Serializers.ts  UserClass.ts  index.ts
shared/src/models/: ApiImage.ts
shared/src/user_classes/: Classes.ts  Permissions.ts  index.ts
uploader/: config.json  config.ts  database.ts  index.ts  package-lock.json  package.json  tsconfig.json
(+48 files in other folders)
