[package]
name = "tango-server"
version = "0.1.0"
edition = "2021"

[alias]
build_prod = "build --target=x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.3"
derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.20"
log4rs = "1.2.0"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-native-tls", "mysql", "macros", "chrono"] }
uuid = { version = "1.4.1", features = ["v4"] }
