[package]
name = "tango-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
vergen =  {version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc", "si"]}

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
actix-web = "4.6.0"
async-process = "2.2.3"
async-trait = "0.1.80"
base64 = "0.22.1"
bcrypt = "0.15.1"
bs58 = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.30"
image = "0.25.1"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
log = "0.4.21"
log4rs = "1.3.0"
md5 = "0.7.0"
num = "0.4.3"
once_cell = "1.19.0"
parse-size = "1.0.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["multipart", "stream"] }
rust-s3 = "0.33.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "mysql", "macros", "chrono"] }
substring = "1.4.5"
tempfile = "3.10.1"
uuid = { version = "1.8.0", features = ["v4"] }
