[package]
name = "tango-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
vergen =  {version = "8.3.2", features = ["build", "cargo", "git", "gitcl", "rustc", "si"]}

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.6.2"
actix-web = "4.10.2"
anyhow = "1.0.97"
apalis = { version = "0.7.0", features = ["timeout"] }
async-process = "2.3.0"
async-trait = "0.1.88"
base64 = "0.22.1"
bcrypt = "0.15.1"
bitmask = "0.5.0"
bs58 = "0.5.1"
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.14.1"
dashmap = "5.5.3"
derive_more = "0.99.19"
dotenv = "0.15.0"
futures = "0.3.31"
image = "0.25.6"
itertools = "0.13.0"
jsonwebtoken = "9.3.1"
keyv = { version = "0.2.1", features = ["sqlite"] }
log = "0.4.27"
log4rs = "1.3.0"
md5 = "0.7.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.21.3"
parse-size = "1.1.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["multipart", "stream"] }
rust-s3 = "0.33.0"
sea-query = { version = "0.30.7", features = ["derive", "thread-safe", "backend-mysql", "with-chrono", "with-uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
snowdon = "0.2.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "mysql", "macros", "chrono"] }
srfng = "1.0.1"
substring = "1.4.5"
tempfile = "3.19.1"
thiserror = "1.0.69"
tokio = { version = "1.44.2", features = ["sync", "rt-multi-thread"] }
tokio-util = "0.7.14"
uuid = { version = "1.16.0", features = ["v4"] }
youtube_dl = "0.10.0"
